# funding-arbitrage-bot

./: .env.example  .gitignore  Makefile  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_bot.py
.github/workflows/: test.yml  test_all_connectors.py
config/: config.example.yaml
src/: __init__.py  main.py
src/bot/: __init__.py  arbitrage_engine.py  funding_oracle.py  position_manager.py
src/config/: settings.py
src/connectors/: __init__.py  base_connector.py  binance_connector.py  bybit_connector.py  connector_manager.py  hyperliquid_connector.py  kucoin_connector.py
src/controllers/: __init__.py
src/core/: __init__.py  clock.py  event_bus.py
src/exchange/: __init__.py  base_connector.py  binance_connector.py  hyperliquid_connector.py  kucoin_connector.py
src/market_data/: candles.py
src/models/: __init__.py  balance.py  config.py  exchange.py  funding_rates.py  opportunity.py  order.py  position.py
src/src/connectors/: base_connector.py
src/strategies/: __init__.py  base_strategy.py  funding_arbitrage.py
src/ui/: cli_interface.py
src/utils/: async_utils.py  math_utils.py  time_utils.py
